Fix modal information overflowing outside

--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -19,6 +19,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 50px;
 }
 
 .popup .popup-main .icon {
@@ -94,25 +95,44 @@
 
 /* details */
 
-.popup .popup-main .details {
-  box-sizing: border-box;
+
+.popup .popup-main .prediction-header {
   width: 100%;
-  height: 100%;
-  padding: 50px;
+  text-align: left;
 }
 
-.popup .popup-main .details .gray-line {
+.popup .popup-main .details {
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+}
+
+.popup .popup-main .gray-line {
   height: 0px;
   width: 100%;
   border: 1px solid rgba(208, 208, 215, 1);
-  /* background-color: rgba(208, 208, 215, 1); */
+}
+
+.popup .popup-main .details > .field {
+  flex: 1 1 25%;
+  margin: 10px 0;
+}
+
+.popup .popup-main .details .field h3, 
+.popup .popup-main .details .field p {
+  margin: 5px;
 }
 
 .popup .popup-main .details .row {
   display: flex;
   justify-content: space-between;
+  flex: 1 1 25%;
+  margin: 10px 0;
 }
-
 
 .popup .popup-main .details .close {
   color: #02A4FF;
@@ -120,4 +140,5 @@
   position: absolute;
   top: 10px;
   right: 50px;
+  cursor: pointer;
 }
